Fix spacing on mobile

--- a/styles/Cart.module.scss
+++ b/styles/Cart.module.scss
@@ -11,6 +11,7 @@
   
     &--open {
       right: 0;
+      max-width: 85%;
     }
   
     &__close-btn {
