--- a/styles/Product.module.scss
+++ b/styles/Product.module.scss
@@ -1,3 +1,12 @@
 .img {
   max-width: 100%;
 }
+
+.grid {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  max-width: 800px;
+  margin-top: 2rem;
+}
